--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timer</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <link
+      rel="stylesheet"
+      href="node_modules/flatpickr/dist/flatpickr.min.css"
+    />
   </head>
   <body>
     <main>
